# Bulle-Cloud

./: .env.example  CLA.md  CLAUDE.md  CONTRIBUTING.md  README.md  manifest.json  package.json  requirements.txt  webpack.config.js
.config/: wt.toml
.github/ISSUE_TEMPLATE/: 01-bug.yml  config.yml  feature_request.md
.github/workflows/: cla.yml  rebrand-release.yml  top-issues.yml
chromium_patches/chrome/: BUILD.gn
chromium_patches/chrome/browser/: about_flags.cc  browser_features.h  flag_descriptions.cc  flag_descriptions.h
chromium_patches/chrome/browser/extensions/: browseros_extension_constants.h  browseros_external_loader.cc  browseros_external_loader.h
chromium_patches/chrome/installer/setup/: setup_constants.cc
docs/: 2-KLAVIS-MCP-DESIGN.md  2-klavis-api-reference.md  appcast-x86_64.xml  appcast.xml  changelog.mdx  contributing.mdx  docs.json  index.mdx  klavis-MCP-tool-design.md  klavis_api_documentation.md  llm-setup-guide.mdx  onboarding.mdx  setting-up-lm-studio.md  setting-up-ollama.md  using-lm-studio-openais-gpt-oss.md
docs/bring-your-own-keys/: claude.mdx  gemini.mdx  openai.mdx  openrouter.mdx
docs/browseros-mcp/: how-to-guide.mdx
docs/features/: ad-blocking.mdx  bring-your-own-llm.mdx  connect-mcps.mdx  cowork.mdx  llm-chat-hub.mdx  use-with-claude-code.mdx
docs/integrations/: n8n.mdx
docs/local-LLMs/: gpt-oss.mdx  lm-studio.mdx  ollama.mdx
docs/troubleshooting/: connection-issues.mdx
docs/update/: index.mdx
patches/: series
scripts/: agent-subtree-sync.sh  save_clipboard.py
signatures/version1/: cla.json
src/: config.ts
(+117 files in other folders)
