diff --git a/chrome/BUILD.gn b/chrome/BUILD.gn
index 97f843f8133c4..b0580fac2007a 100644
--- a/chrome/BUILD.gn
+++ b/chrome/BUILD.gn
@@ -18,6 +18,7 @@ import("//build/config/win/manifest.gni")
 import("//build/private_code_test/private_code_test.gni")
 import("//build/toolchain/toolchain.gni")
 import("//chrome/browser/buildflags.gni")
+import("//chrome/browser/sparkle_buildflags.gni")
 import("//chrome/chrome_paks.gni")
 import("//chrome/common/features.gni")
 import("//chrome/process_version_rc_template.gni")
@@ -1218,6 +1219,10 @@ if (is_win) {
       bundle_deps += [ ":preinstalled_apps" ]
     }
 
+    if (enable_sparkle) {
+      bundle_deps += [ "//third_party/sparkle:sparkle" ]
+    }
+
     configs += [ ":chrome_dll_symbol_order" ]
     if (!is_component_build && !using_sanitizer) {
       configs += [ ":chrome_dll_symbol_exports" ]
@@ -1493,6 +1498,7 @@ copy("visual_elements_resources") {
     "//chrome/app/theme/$branding_path_component/win/tiles/Logo.png",
     "//chrome/app/theme/$branding_path_component/win/tiles/SmallLogo.png",
     "app/visual_elements_resources/chrome.VisualElementsManifest.xml",
+    "app/visual_elements_resources/browseros.VisualElementsManifest.xml",
   ]
 
   if (is_chrome_branded) {
